# ruff-sage

./: Cargo.toml
crates/ruff_sage_lsp/: ADVANCED_CAPABILITIES.md  Cargo.toml  README.md
crates/ruff_sage_lsp/src/: advanced_source_map.rs  document_manager.rs  incremental_completion.rs  lib.rs  preprocess.rs  realtime_analyzer.rs  server.rs  session.rs  simple_server.rs  source_map.rs
examples/sagemath/: README.md  basic_examples.sage  number_theory.sage
